--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="head">
     <h1>Sketch <span class="h1">Art</span></h1>
-    <h3>Etch-a-Sketch <img src="./images/teddy-face.png" alt="image of a teddy's face" width="32" height="32"></h3>
+    <h3>Etch-a-Sketch <img src="./images/teddy-face.png" alt="image of a teddy's face" width="52" height="52"></h3>
   </div>
   <div class="container">
     <div class="controls">
@@ -33,7 +33,7 @@
     </div>
     <div class="game-grid">
       <div class="modal-how-to">
-        <div class="step-one">
+        <div class="card step-one">
           <p>
             Sketch Art empowers you to create your own experience and customize
             your drawing space/boxes by making pixelated paintings by moving your 
@@ -41,7 +41,7 @@
           </p>
           
         </div>
-        <div class="step-two">
+        <div class="card step-two">
           <h4>Here is how-to:</h4>
             <ul>
               <li>Tap on the "Set Box" button and enter the number of boxes you want</li>
@@ -54,7 +54,7 @@
               </li>
             </ul>
         </div>
-        <div class="step-three">
+        <div class="card step-three">
           <p>...And that's all! Go try it and feel the art!!</p>
           <p>I will be thankful for some stars and comments on my 
             <a class="git" href="http://www.github.com/MindPrepDev">GitHub</a> if you can, please &#128591;
@@ -68,7 +68,7 @@
       </div>
     </div>
     <div class="meme">
-      <img src="./images/meme.jpg" alt="meme holding a board" width="200px" height="600">
+      <img src="./images/meme.jpg" alt="meme holding a board" width="200px" height="300">
       <div class="card-info">
         <p>Like what you see?</p>
         <div class="likes-info">
@@ -81,16 +81,16 @@
         </div>
       </div>
     </div>
-    <div class="likes-info footer">
-      <a class="git" href="http://www.github.com/MindPrepDev"><img src="./images/github-icon.png" 
-        alt="github icon" width="32" height="32">
-      </a>
-      <a class="git" href="http://www.twitter.com/olaoyeelijah"><img src="./images/footer-twt.svg" 
-        alt="twitter icon" width="32" height="32">
-      </a>
-    </div>
-    &copy; Sketch Art 2022
   </div>
+  <div class="likes-info footer">
+    <a class="git" href="http://www.github.com/MindPrepDev"><img src="./images/github-icon.png" 
+      alt="github icon" width="32" height="32">
+    </a>
+    <a class="git" href="http://www.twitter.com/olaoyeelijah"><img src="./images/footer-twt.svg" 
+      alt="twitter icon" width="32" height="32">
+    </a>
+  </div>
+  &copy; Sketch Art 2022
   <script src="main.js"></script>
 </body>
 </html>
